# AUX_SO1_S2_2024_FERRER

./: Contenido.md  README.md  bash_scripts.md  sostenibilidad_ambiental.md
Contenido/: Contenido.md  Ejemplo Kubernetes.md  Links.md  Rust.md  bash_scripts.md  contenedores.md  kubernetes.md  modulos.md  procesos_concurrencia.md  rust.md  virtualizacion.md
Contenido/conferencia/Kafka con kubernetes/: Comandos de presentacion.txt  consumer.yaml  kafka-topic.yaml  producer.yaml
Contenido/ejemplos/: .gitignore
Contenido/ejemplos/containers/: readme.md  script.sh
Contenido/ejemplos/containers/high/: Dockerfile  high.py
Contenido/ejemplos/containers/low/: Dockerfile  low.py
Contenido/ejemplos/gRPC-1/: comandos.txt
Contenido/ejemplos/gRPC-1/grpc-client/: Dockerfile  client.go  go.mod  user.proto
Contenido/ejemplos/gRPC-1/grpc-server/: Dockerfile  go.mod  server.go  user.proto
Contenido/ejemplos/gRPC-1/k8s/: comandos.txt  grpc-client-deployment.yaml  grpc-server-deployment.yaml  grpc-server-service.yaml  namespace.yaml
Contenido/ejemplos/gRPC-2/: doc.md
Contenido/ejemplos/gRPC-2/golang-client/: Dockerfile  go.mod  go.sum  main.go
Contenido/ejemplos/gRPC-2/grpc-client/: Cargo.toml  Dockerfile  build.rs
Contenido/ejemplos/gRPC-2/grpc-client/proto/: studentgrpc.proto
Contenido/ejemplos/gRPC-2/grpc-client/src/: main.rs
Contenido/ejemplos/helm/: helm.txt
Contenido/ejemplos/modulo/: Makefile  readme.md  sysinfo.c
Contenido/ejemplos/python_service/: Dockerfile  docker-compose.yaml  main.py
Contenido/ejemplos/rust_service/: Cargo.toml  readme.md
(+14 files in other folders)
